--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@preact/signals": "^1.3.0",
 		"@types/node": "^22.5.0",
 		"classnames": "^2.5.1",
+		"marked": "^14.0.0",
 		"preact": "^10.22.1"
 	},
 	"devDependencies": {
